$Id: NEWS,v 1.191 2002-06-23 22:12:05 jwm Exp $

CVS
---------------------------------
- Bug 1407 - Removed unnecessary check for prior PORT/PASV in STOR
             PRE_CMD handler (RETR PRE_CMD handler did not have these checks)
- Added new Define, <IfDefine>, <IfModule> configuration directives, new
  command-line option -D (a la Apache)
- Bug 1556 - Restructuring the way signals are handled, so that signal handling
             functions are executed synchronously, not asynchronously
- Bug 1463 - Added reporting of dispatching to auth handlers at debug level 6
- Bug 1258 - Added STOU command handler
- Bug 1534 - Added LFS support
- Bug 1647 - Changed unnecessary use of umode_t to mode_t in mod_ls.
- Bug 1650 - Mergedown bug with LsDefaultOptions directive fixed.
- Bug 1306 - Added a TimeoutSession directive that can be used to set a maximum
             time limit on an entire session.
- Bug 1643 - Cleaned up several source code files.
- Bug 1569 - Cygwin support, added README.cygwin

1.2.5 - Released 2002-06-08
---------------------------------
New mod_sql (4.08)
- Bug 1379 - Changed mod_sql.c to use memset() instead of bzero()
- Bug 1576 - Checks for a NULL pointer in a border case involving use of
             SQLHomedirOnDemand
- Bug 1586 - Fixed bad assumption concerning row count involving SQL-provided
             group information
- Bug 1625 - Adds compatibility fix to mod_sql_mysql for older MySQL libraries
             (a function name changed in MySQL 3.23.14)

1.2.5rc3 - Released 2002-05-30
---------------------------------
New mod_ldap (2.8.6)
- Bug 1612 - Fixed logging of RFC931 usernames in xferlog
- Bug 1595 - Transfers that result in error conditions no longer cause
             the data connection to be closed prematurely via data_cleanup()
- Bug 1627 - Fixed bug in timer code where timers were being blocked
             indefinitely, manifesting as non-functioning idle timeouts
- Bug 1521 - Cleanup of function prototypes